<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/on_off_all_option"
        android:icon="@drawable/switch_off"
        android:showAsAction="ifRoom|withText"
        android:title="OFF"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/add_option"
        android:icon="@drawable/add_new_48"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_device"/>
    <item
        android:id="@+id/reset_option"
        android:icon="@drawable/sync_48"
        android:showAsAction="ifRoom|withText"
        android:title="@string/refesh"/>
    <item
        android:id="@+id/about_option"
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/about"/>

</menu>