<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_screen_white" >

    <EditText
        android:id="@+id/edt_phone_number_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:focusable="true"
        android:inputType="number"
        android:hint="@string/edt_hint_phone" />

    <TextView
        android:id="@+id/text_enter_phone_number_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edt_phone_number_config"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_text_size_enter_phone_number"
        android:text="@string/text_enter_phone_num"
        android:textSize="@dimen/activity_text_size_enter_phone_number" 
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="36dp"
        android:layout_marginRight="67dp"
        android:enabled="false"
        android:text="@string/btn_finish" />

</RelativeLayout>